...
    <string name="github">깃허브</string>
    <string name="email">이메일</string>
    <string name="email_must_be_needed">이메일은 필수 사항입니다</string>
    <string name="email_is_not_valid">이메일이 유효하지 않습니다</string>
    <string name="github_url_is_not_valid">깃허브 주소가 유효하지 않습니다</string>
    <string name="mailto_scheme">mailto:%s</string>
    <string name="kick">강퇴하기</string>
    <string name="see_user_post">작성글 보기</string>
    <string name="edit_my_info">내 정보 수정</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="recheck_dialog_title">정말로 중단할까요?</string>
    <string name="recheck_dialog_text">작성하신 내용은 저장되지 않습니다.</string>
...
    <string name="sorting_by_generation_descending">기수 내림차순</string>
    <string name="sorting_by_student_id_ascending">학번 오름차순</string>
    <string name="enter_password">비밀번호를 입력하세요</string>
    <string name="show_password">비밀번호 보이기</string>
    <string name="hide_password">비밀번호 숨기기</string>
    <string name="failed_to_update">수정에 실패했습니다.</string>
    <string name="more_info_button">더보기 버튼</string>
    <string name="comment_info_button">댓글 정보 버튼</string>
    <string name="is_kicked">탈퇴됨</string>
    <string name="create_user">회원 생성</string>
    <string name="type">타입</string>
    <string name="are_you_sure_you_want_to_delete">정말로 삭제하시겠습니까?</string>
    <string name="post_deleted">글이 삭제됨</string>
    <string name="kick_user_recheck_dialog_title">정말로 강퇴하시겠습니까?</string>
    <string name="kick_user_recheck_dialog_text">%s님은 동아리에서 강퇴됩니다.</string>
...
